# OpenAir

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  STATUS.md
.claude/: CLAUDE.md  settings.local.json
.claude/docs/: airplay2_transmitter_brief.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/tui/: Cargo.toml
apps/tui/src/: main.rs
crates/audio-codec/: Cargo.toml
crates/audio-codec/src/: lib.rs
crates/audio-rtp/: Cargo.toml
crates/audio-rtp/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  pairings.rs  source.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: chacha.rs  hkdf.rs  lib.rs  srp.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: browser.rs  device.rs  lib.rs  txt.rs
crates/pairing/: Cargo.toml
crates/pairing/src/: lib.rs  normal.rs  tlv8.rs  transient.rs
crates/ptp-helper/: Cargo.toml
crates/ptp-helper/src/: main.rs
crates/rtsp/: Cargo.toml
crates/rtsp/src/: connection.rs  lib.rs  session.rs  stream.rs
crates/timing/: Cargo.toml
crates/timing/src/: lib.rs  ptp.rs
docs/superpowers/specs/: 2026-07-22-handoff-implementation-plan.md  2026-07-22-handoff-local-mute-volume-mirror-design.md
tools/: hap_oracle_server.py  hap_probe.py  mitm_proxy.py  pyatv_probe.py
