[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/discovery",
    "crates/crypto",
    "crates/pairing",
    "crates/rtsp",
    "crates/audio-codec",
    "crates/audio-rtp",
    "crates/timing",
    "crates/capture",
    "crates/ptp-helper",
    "crates/client",
    "apps/cli",
    "apps/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antoine Rossi <antoinenzrossi@gmail.com>"]
license = "MIT"
repository = "https://github.com/anrossi/openair"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS discovery (pure userland)
mdns-sd = "0.11"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
x25519-dalek = "2"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
srp = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
plist = "1"

# Audio capture
cpal = "0.15"

# WAV file decoding
hound = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# TUI
ratatui = "0.28"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
