[package]
name = "openair-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "openair"
path = "src/main.rs"

[dependencies]
openair-client = { path = "../../crates/client" }
openair-discovery = { path = "../../crates/discovery" }
openair-rtsp = { path = "../../crates/rtsp" }
openair-core = { path = "../../crates/core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
