[package]
name = "openair-audio-rtp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openair-core = { path = "../core" }
openair-crypto = { path = "../crypto" }
openair-audio-codec = { path = "../audio-codec" }
openair-timing = { path = "../timing" }
chacha20poly1305.workspace = true
thiserror.workspace = true
tracing.workspace = true
