[package]
name = "openair-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openair-core = { path = "../core" }
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
thiserror.workspace = true
