[package]
name = "openair-pairing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openair-core = { path = "../core" }
openair-crypto = { path = "../crypto" }
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
