[package]
name = "openair-rtsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openair-core = { path = "../core" }
openair-crypto = { path = "../crypto" }
openair-pairing = { path = "../pairing" }
thiserror.workspace = true
tracing.workspace = true
plist.workspace = true
rand.workspace = true
